# py_playground

./: .gitmodules  decorator_demo.py  openai_api_demo.py  pyproject.toml  test.py  torch_demo.py
.devcontainer/: Dockerfile  devcontainer.json
aihuishou/: aihuishou.py
demos/: decorator_demo.py  openai_api.py  psycopg2_demo.py  pytorch_demo.py
jupyter_playground/: Numpy01.ipynb  Numpy02.ipynb  OpenAIDemo.ipynb  PythonBasic.ipynb  baidumap_playground.ipynb
jupyter_playground/Numpy练习/: Numpy01.ipynb  Numpy03.ipynb
jupyter_playground/上海图书馆项目调试/: shlib_playground.ipynb
jupyter_playground/程序员数学：用python学透线性代数和微积分/: Python学微积分.ipynb  程序员数学：用python学透线性代数和微积分.ipynb
openai_api/: my_openai.py
usedmobiprice/: huishoubao.py
爱回收爬虫/: aihuishou.py  huishoubao.py
