[project]
name = "py_playground"
version = "0.1.1"
description = ""
authors = [
    { name = "gccpacman", email = "gccpacman@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "icecream>=2.1.4"
]

[poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
