[project]
name = "py-playground"
version = "0.1.2"
description = ""
authors = [
    {name = "gccpacman"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai (>=1.60.2,<2.0.0)",
    "icecream (>=2.1.4,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "aiohttp (>=3.11.11,<4.0.0)",
    "torch (>=2.6.0,<3.0.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
icecream = "^2.1.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
