[project]
name = "py-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai (>=1.60.2,<2.0.0)",
    "icecream>=2.1.4,<3.0.0",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "aiohttp (>=3.11.11,<4.0.0)",
    "torch (>=2.6.0,<3.0.0)",
]

